moj/y.output
Nieużywane symbole terminalne w gramatyce

   KW_DO
   IDENTTAB


Stan 50 konflikty: 1 przesunięcie/redukcja


Gramatyka

    0 $accept: SPACE $end

    1 SPACE: SPACE SPACE1
    2      | SPACE1

    3 SPACE1: CLASS
    4       | KW_PUBLIC METHOD
    5       | METHODBODY2

    6 BEGINCLASS: KW_CLASS
    7           | KW_GAME
    8           | KW_MODULE

    9 CLASS: BEGINCLASS CLASSES CLASSBODY

   10 CLASSNAME: IDENTIFIER

   11 CLASSES: CLASSNAME
   12        | CLASSNAME ':' INHERIT_LIST

   13 PARENTNAME: IDENTIFIER

   14 INHERIT_LIST: PARENTNAME ',' INHERIT_LIST
   15             | PARENTNAME

   16 CLASSBODY: '{' CLASSBODY1 '}'
   17          | '{' '}'

   18 CLASSBODY1: CLASSBODY1 METHOD
   19           | METHOD

   20 METHODNAME2: IDENTIFIER
   21            | IDENTIFIER '='
   22            | KW_OPERATOR '+'
   23            | KW_OPERATOR '-'
   24            | KW_OPERATOR '*'
   25            | KW_OPERATOR '/'
   26            | KW_OPERATOR '%'
   27            | KW_OPERATOR '='
   28            | KW_OPERATOR BH_E
   29            | KW_OPERATOR BH_NE
   30            | KW_OPERATOR '<'
   31            | KW_OPERATOR '>'
   32            | KW_OPERATOR BH_LE
   33            | KW_OPERATOR BH_AE
   34            | KW_OPERATOR BH_PP
   35            | KW_OPERATOR BH_MM

   36 METHODNAME: METHODNAME2
   37           | BASETYPE METHODNAME2
   38           | KW_PUBLIC BASETYPE METHODNAME2
   39           | KW_PUBLIC METHODNAME2
   40           | KW_VIRTUAL BASETYPE METHODNAME2
   41           | KW_VIRTUAL METHODNAME2

   42 METHOD2: METHODNAME ARGUMENTS
   43        | METHODNAME

   44 METHOD: METHOD2 METHODBODY

   45 ARGUMENTS: '(' ARGUMENTS1 ')'
   46          | '(' ')'

   47 ARGUMENTS1: ARGUMENT
   48           | ARGUMENT ',' ARGUMENTS1

   49 ARGUMENT: BASETYPE IDENTIFIER
   50         | BASETYPE IDENTIFIER '[' NM_INT ']'

   51 METHODBODY: '{' METHODBODY1 '}'
   52           | '{' '}'
   53           | ';'

   54 METHODBODY1: METHODBODY1 METHODBODY2
   55            | METHODBODY2

   56 METHODBODY2: IFEXPR
   57            | WHILEEXPR
   58            | FOREXPR
   59            | EQUATION ';'
   60            | EXPR ';'
   61            | ORDNEW
   62            | ORDDELETE ';'
   63            | RETEXPR
   64            | LOCALNEW ';'
   65            | METHODBODY
   66            | MATCH

   67 MATCHSTART: KW_MATCH '(' EXPR ')' '{'

   68 $@1: /* pusta */

   69 MEXPR: EXPR ',' $@1 MEXPR
   70      | EXPR

   71 MATCHBODY3: EXPR OPSET

   72 $@2: /* pusta */

   73 MATCHBODY3: EXPR ',' $@2 MEXPR OPSET

   74 MATCHBODY2: MATCHBODY3 MATCHEXPR2

   75 MATCHBODY: MATCHBODY2 MATCHBODY
   76          | MATCHBODY2

   77 MATCHEXPR2: METHODBODY2

   78 MATCHEND2: '?' OPSET

   79 MATCHEND1: MATCHEND2 MATCHEXPR2

   80 MATCHEND: MATCHEND1 '}'

   81 MATCH: MATCHSTART MATCHBODY MATCHEND

   82 RETEXPR: KW_RETURN ARGSMETH1 ';'
   83        | KW_RETURN ';'

   84 FOREXPR: KW_FOR EQFOR1 CMPFOR EQFOR2 METHODBODY2

   85 EQFOR1: EQFOR1A

   86 EQFOR1A: '(' EQUATION
   87        | '('
   88        | '(' LOCALNEW

   89 CMPFOR: CMPFOR1

   90 CMPFOR1: ';' EXPR
   91        | ';'

   92 EQFOR2: ';' EQFOR2A

   93 EQFOR2A: EQUATION ')'
   94        | ')'

   95 STARTWHILE: KW_WHILE

   96 WHILEEXPR: STARTWHILE IFBODY

   97 LOCALNEW1: ARGUMENT
   98          | ARGUMENT ATTRIB

   99 LOCALNEW: LOCALNEW1
  100         | LOCALNEW1 ',' LOCALNEW

  101 ATTRIB: '=' EXPR

  102 STARTIF: KW_IF

  103 STARTIF1: STARTIF IFBODY

  104 IFEXPR: STARTIF1
  105       | STARTIF1 IFELS METHODBODY2

  106 IFELS: KW_ELSE

  107 IFBODY1: '(' EXPR ')'

  108 IFBODY: IFBODY1 METHODBODY2

  109 STARTORDNEW: KW_NEW

  110 ORDNEW2: STARTORDNEW ARGTONEW1 ARGTONEW2

  111 ORDNEW1: ORDNEW2

  112 ORDNEW: ORDNEW1 ';'
  113       | ORDNEW2 ARGSMETH ';'
  114       | ORDNEW1 ATTRIB ';'
  115       | ORDNEW1 OPE EXPR ';'

  116 $@3: /* pusta */

  117 ORDNEW: ORDNEW1 '{' $@3 METHODBODY1 '}' ';'

  118 $@4: /* pusta */

  119 $@5: /* pusta */

  120 ORDNEW: ORDNEW2 ARGSMETH '{' $@4 ARGUMENTS $@5 METHODBODY1 '}' ';'

  121 ORDDELETE: KW_DELETE IDENTIFIER
  122          | KW_DELETE ARGEXPR

  123 ARGTONEW2: ARGEXPR
  124          | IDENTIFIER

  125 ARGTONEW1: ARGEXPR
  126          | IDENTIFIER
  127          | BASETYPE

  128 BASETYPE: KW_INT
  129         | KW_REAL
  130         | KW_STRING
  131         | KW_DEF
  132         | '@'

  133 REFERENCE: '[' EXPR ']'

  134 EQUATION: NAMEIDENT ATTRIB
  135         | ARGEXPR ATTRIB
  136         | NAMEIDENT BH_PP
  137         | NAMEIDENT BH_MM
  138         | NAMEIDENT BH_PE EXPR
  139         | NAMEIDENT BH_MNE EXPR
  140         | NAMEIDENT BH_MLE EXPR
  141         | NAMEIDENT BH_DE EXPR
  142         | NAMEIDENT BH_MDE EXPR
  143         | ARGEXPR BH_PP
  144         | ARGEXPR BH_MM
  145         | ARGEXPR BH_PE EXPR
  146         | ARGEXPR BH_MNE EXPR
  147         | ARGEXPR BH_MLE EXPR
  148         | ARGEXPR BH_DE EXPR
  149         | ARGEXPR BH_MDE EXPR
  150         | '|' LARGS '|' '=' ARGSMETH1
  151         | ARGEXPR OPE EXPR
  152         | NAMEIDENT OPE EXPR
  153         | ARGEXPR OPPP
  154         | NAMEIDENT OPPP
  155         | ARGEXPR OPMM
  156         | NAMEIDENT OPMM
  157         | '_' '=' EXPR
  158         | KW_THIS OPE EXPR
  159         | KW_THIS OPPP
  160         | KW_THIS OPMM

  161 OREXP: EXPRANDOR2 BH_OROR

  162 ANDEXP: EXPRANDOR2 BH_ANDAND

  163 STARTOREXP: EXPRANDOR2 BH_OROR

  164 STARTANDEXP: EXPRANDOR2 BH_ANDAND

  165 EXPRANDOR2: '!' '(' EXPRANDOR ')'
  166           | '(' EXPRANDOR ')'
  167           | EXPR1

  168 QIFEXP1: '?'

  169 QIFEXP2: ':'

  170 QIFEXPR: EXPRANDOR3 QIFEXP1 EXPR QIFEXP2 EXPR

  171 EXPRANDOR3: EXPRANDOR
  172           | EXPRANDOR2

  173 EXPR: EXPRANDOR3
  174     | QIFEXPR

  175 EXPRANDOR: STARTOREXP EXPRTOANDOR
  176          | STARTANDEXP EXPRTOANDOR

  177 EXPRTOANDOR: EXPRANDOR2
  178            | EXPR3

  179 EXPR3: ANDEXP EXPRTOANDOR
  180      | OREXP EXPRTOANDOR

  181 EXPR1: VALUE
  182      | EXPR1 '+' EXPR1
  183      | EXPR1 '-' EXPR1
  184      | EXPR1 '*' EXPR1
  185      | EXPR1 '/' EXPR1
  186      | EXPR1 '%' EXPR1
  187      | EXPR1 '&' EXPR1
  188      | EXPR1 '|' EXPR1
  189      | EXPR1 BH_E EXPR1
  190      | EXPR1 BH_NE EXPR1
  191      | EXPR1 BH_AE EXPR1
  192      | EXPR1 BH_LE EXPR1
  193      | EXPR1 '<' EXPR1
  194      | EXPR1 '>' EXPR1
  195      | '-' EXPR1
  196      | '!' EXPR1
  197      | '(' EXPR1 ')'
  198      | '(' QIFEXPR ')'
  199      | EXPR1 OPP EXPR1
  200      | EXPR1 OPM EXPR1
  201      | EXPR1 OPMU EXPR1
  202      | EXPR1 OPD EXPR1
  203      | EXPR1 OPMO EXPR1
  204      | EXPR1 OPEQ EXPR1
  205      | EXPR1 OPNE EXPR1
  206      | EXPR1 OPAE EXPR1
  207      | EXPR1 OPLE EXPR1
  208      | EXPR1 OPA EXPR1
  209      | EXPR1 OPL EXPR1
  210      | STARTCALLEXPR IDENTIFIER ARGSMETH
  211      | STARTCALLEXPR IDENTIFIER

  212 STARTCALLEXPR: EXPR1 OPPOINTER

  213 STARTCALLEXPR2: EXPR2 OPPOINTER

  214 EXPR2: VALUE
  215      | EXPR2 '+' EXPR2
  216      | EXPR2 '-' EXPR2
  217      | EXPR2 '*' EXPR2
  218      | EXPR2 '/' EXPR2
  219      | EXPR2 '%' EXPR2
  220      | EXPR2 '&' EXPR2
  221      | EXPR2 '|' EXPR2
  222      | '-' EXPR2
  223      | '(' EXPR2 ')'
  224      | STARTCALLEXPR2 IDENTIFIER ARGSMETH
  225      | STARTCALLEXPR2 IDENTIFIER

  226 NUMBER: NM_INT
  227       | NM_REAL
  228       | NM_STRING

  229 VALUE: VARIABLE
  230      | NUMBER
  231      | CALLMETHOD
  232      | '_'

  233 CALLMETHOD: CALLMETH

  234 CALLMETH: CALLOBJECT
  235         | CALLTHIS
  236         | CALLPARENT

  237 CALLAMBDASTART: '{'

  238 CALLAMBDASTART2: CALLAMBDASTART ARGUMENTS

  239 CALLAMBDASTART3: '{'

  240 CALLAMBDASTART4: CALLAMBDASTART3 ARGUMENTS

  241 CALLOBJECTSTART: IDENTIFIER
  242                | ARGEXPR

  243 CALLFUNCSTART: KW_FUNC

  244 CALLOBJECT: CALLOBJECTSTART '.' CALLTHIS1
  245           | CALLOBJECTSTART CALLAMBDASTART METHODBODY1 '}'
  246           | CALLOBJECTSTART ARGSMETH CALLAMBDASTART2 METHODBODY1 '}'
  247           | CALLFUNCSTART CALLAMBDASTART3 METHODBODY1 '}'
  248           | CALLFUNCSTART CALLAMBDASTART4 METHODBODY1 '}'

  249 CALLPARENTSTART: IDENTIFIER
  250                | ARGEXPR

  251 CALLPARENT: CALLPARENTSTART BH_CP CALLTHIS1

  252 CALLTHISSTART: KW_THIS

  253 CALLTHIS: CALLTHISSTART '.' CALLTHIS1

  254 $@6: /* pusta */

  255 CALLTHIS: '.' $@6 CALLTHIS1

  256 METHODCALLED: IDENTIFIER
  257             | IDENTIFIER '='
  258             | ARGEXPR
  259             | ARGEXPR '='

  260 CALLTHIS1: METHODCALLED ARGSMETH
  261          | METHODCALLED

  262 ARGEXPR: '<' EXPR2 '>'
  263        | '\\' EXPR '\\'

  264 LARG: REFERENCE
  265     | NAMEIDENT
  266     | ORDNEW1
  267     | ARGUMENT
  268     | '_'

  269 LARGS: LARG ',' LARGS
  270      | LARG

  271 ARGSMETH: '(' ARGSMETH1 ')'
  272         | '(' ')'

  273 ARGSMETH1: EXPR
  274          | EXPR ',' ARGSMETH1

  275 NAMEIDENT: IDENTIFIER

  276 NAMEIDENTR: IDENTIFIER

  277 VARIABLE: NAMEIDENTR
  278         | REFERENCE
  279         | KW_THIS


Symbole terminalne i reguły, w których występują

$end (0) 0
'!' (33) 165 196
'%' (37) 26 186 219
'&' (38) 187 220
'(' (40) 45 46 67 86 87 88 107 165 166 197 198 223 271 272
')' (41) 45 46 67 93 94 107 165 166 197 198 223 271 272
'*' (42) 24 184 217
'+' (43) 22 182 215
',' (44) 14 48 69 73 100 269 274
'-' (45) 23 183 195 216 222
'.' (46) 244 253 255
'/' (47) 25 185 218
':' (58) 12 169
';' (59) 53 59 60 62 64 82 83 90 91 92 112 113 114 115 117 120
'<' (60) 30 193 262
'=' (61) 21 27 101 150 157 257 259
'>' (62) 31 194 262
'?' (63) 78 168
'@' (64) 132
'[' (91) 50 133
'\\' (92) 263
']' (93) 50 133
'_' (95) 157 232 268
'{' (123) 16 17 51 52 67 117 120 237 239
'|' (124) 150 188 221
'}' (125) 16 17 51 52 80 117 120 245 246 247 248
error (256)
KW_CLASS (258) 6
KW_MODULE (259) 8
KW_GAME (260) 7
KW_INT (261) 128
KW_DEF (262) 131
KW_DO (263)
KW_WHILE (264) 95
KW_NEW (265) 109
KW_THIS (266) 158 159 160 252 279
KW_DELETE (267) 121 122
KW_STRING (268) 130
KW_REAL (269) 129
KW_IF (270) 102
KW_ELSE (271) 106
KW_RETURN (272) 82 83
KW_FOR (273) 84
KW_PUBLIC (274) 4 38 39
KW_VIRTUAL (275) 40 41
KW_MATCH (276) 67
NM_STRING (277) 228
NM_INT (278) 50 226
NM_REAL (279) 227
IDENTIFIER (280) 10 13 20 21 49 50 121 124 126 210 211 224 225 241
    249 256 257 275 276
IDENTTAB (281)
KW_FUNC (282) 243
BH_E (283) 28 189
BH_NE (284) 29 190
BH_ANDAND (285) 162 164
BH_OROR (286) 161 163
BH_AE (287) 33 191
BH_PP (288) 34 136 143
BH_MM (289) 35 137 144
BH_LE (290) 32 192
BH_PE (291) 138 145
BH_MNE (292) 139 146
BH_MLE (293) 140 147
BH_DE (294) 141 148
BH_MDE (295) 142 149
BH_CP (296) 251
KW_OPERATOR (297) 22 23 24 25 26 27 28 29 30 31 32 33 34 35
OPP (298) 199
OPM (299) 200
OPMU (300) 201
OPD (301) 202
OPMO (302) 203
OPE (303) 115 151 152 158
OPEQ (304) 204
OPNE (305) 205
OPAE (306) 206
OPLE (307) 207
OPA (308) 208
OPL (309) 209
OPSET (310) 71 73 78
OPPOINTER (311) 212 213
OPPP (312) 153 154 159
OPMM (313) 155 156 160
NEG (314)


Symbole nieterminalne i reguły, w których występują

$accept (85)
    po lewej: 0
SPACE (86)
    po lewej: 1 2, po prawej: 0 1
SPACE1 (87)
    po lewej: 3 4 5, po prawej: 1 2
BEGINCLASS (88)
    po lewej: 6 7 8, po prawej: 9
CLASS (89)
    po lewej: 9, po prawej: 3
CLASSNAME (90)
    po lewej: 10, po prawej: 11 12
CLASSES (91)
    po lewej: 11 12, po prawej: 9
PARENTNAME (92)
    po lewej: 13, po prawej: 14 15
INHERIT_LIST (93)
    po lewej: 14 15, po prawej: 12 14
CLASSBODY (94)
    po lewej: 16 17, po prawej: 9
CLASSBODY1 (95)
    po lewej: 18 19, po prawej: 16 18
METHODNAME2 (96)
    po lewej: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35, po prawej:
    36 37 38 39 40 41
METHODNAME (97)
    po lewej: 36 37 38 39 40 41, po prawej: 42 43
METHOD2 (98)
    po lewej: 42 43, po prawej: 44
METHOD (99)
    po lewej: 44, po prawej: 4 18 19
ARGUMENTS (100)
    po lewej: 45 46, po prawej: 42 120 238 240
ARGUMENTS1 (101)
    po lewej: 47 48, po prawej: 45 48
ARGUMENT (102)
    po lewej: 49 50, po prawej: 47 48 97 98 267
METHODBODY (103)
    po lewej: 51 52 53, po prawej: 44 65
METHODBODY1 (104)
    po lewej: 54 55, po prawej: 51 54 117 120 245 246 247 248
METHODBODY2 (105)
    po lewej: 56 57 58 59 60 61 62 63 64 65 66, po prawej: 5 54 55
    77 84 105 108
MATCHSTART (106)
    po lewej: 67, po prawej: 81
MEXPR (107)
    po lewej: 69 70, po prawej: 69 73
$@1 (108)
    po lewej: 68, po prawej: 69
MATCHBODY3 (109)
    po lewej: 71 73, po prawej: 74
$@2 (110)
    po lewej: 72, po prawej: 73
MATCHBODY2 (111)
    po lewej: 74, po prawej: 75 76
MATCHBODY (112)
    po lewej: 75 76, po prawej: 75 81
MATCHEXPR2 (113)
    po lewej: 77, po prawej: 74 79
MATCHEND2 (114)
    po lewej: 78, po prawej: 79
MATCHEND1 (115)
    po lewej: 79, po prawej: 80
MATCHEND (116)
    po lewej: 80, po prawej: 81
MATCH (117)
    po lewej: 81, po prawej: 66
RETEXPR (118)
    po lewej: 82 83, po prawej: 63
FOREXPR (119)
    po lewej: 84, po prawej: 58
EQFOR1 (120)
    po lewej: 85, po prawej: 84
EQFOR1A (121)
    po lewej: 86 87 88, po prawej: 85
CMPFOR (122)
    po lewej: 89, po prawej: 84
CMPFOR1 (123)
    po lewej: 90 91, po prawej: 89
EQFOR2 (124)
    po lewej: 92, po prawej: 84
EQFOR2A (125)
    po lewej: 93 94, po prawej: 92
STARTWHILE (126)
    po lewej: 95, po prawej: 96
WHILEEXPR (127)
    po lewej: 96, po prawej: 57
LOCALNEW1 (128)
    po lewej: 97 98, po prawej: 99 100
LOCALNEW (129)
    po lewej: 99 100, po prawej: 64 88 100
ATTRIB (130)
    po lewej: 101, po prawej: 98 114 134 135
STARTIF (131)
    po lewej: 102, po prawej: 103
STARTIF1 (132)
    po lewej: 103, po prawej: 104 105
IFEXPR (133)
    po lewej: 104 105, po prawej: 56
IFELS (134)
    po lewej: 106, po prawej: 105
IFBODY1 (135)
    po lewej: 107, po prawej: 108
IFBODY (136)
    po lewej: 108, po prawej: 96 103
STARTORDNEW (137)
    po lewej: 109, po prawej: 110
ORDNEW2 (138)
    po lewej: 110, po prawej: 111 113 120
ORDNEW1 (139)
    po lewej: 111, po prawej: 112 114 115 117 266
ORDNEW (140)
    po lewej: 112 113 114 115 117 120, po prawej: 61
$@3 (141)
    po lewej: 116, po prawej: 117
$@4 (142)
    po lewej: 118, po prawej: 120
$@5 (143)
    po lewej: 119, po prawej: 120
ORDDELETE (144)
    po lewej: 121 122, po prawej: 62
ARGTONEW2 (145)
    po lewej: 123 124, po prawej: 110
ARGTONEW1 (146)
    po lewej: 125 126 127, po prawej: 110
BASETYPE (147)
    po lewej: 128 129 130 131 132, po prawej: 37 38 40 49 50 127
REFERENCE (148)
    po lewej: 133, po prawej: 264 278
EQUATION (149)
    po lewej: 134 135 136 137 138 139 140 141 142 143 144 145 146 147
    148 149 150 151 152 153 154 155 156 157 158 159 160, po prawej:
    59 86 93
OREXP (150)
    po lewej: 161, po prawej: 180
ANDEXP (151)
    po lewej: 162, po prawej: 179
STARTOREXP (152)
    po lewej: 163, po prawej: 175
STARTANDEXP (153)
    po lewej: 164, po prawej: 176
EXPRANDOR2 (154)
    po lewej: 165 166 167, po prawej: 161 162 163 164 172 177
QIFEXP1 (155)
    po lewej: 168, po prawej: 170
QIFEXP2 (156)
    po lewej: 169, po prawej: 170
QIFEXPR (157)
    po lewej: 170, po prawej: 174 198
EXPRANDOR3 (158)
    po lewej: 171 172, po prawej: 170 173
EXPR (159)
    po lewej: 173 174, po prawej: 60 67 69 70 71 73 90 101 107 115
    133 138 139 140 141 142 145 146 147 148 149 151 152 157 158 170
    263 273 274
EXPRANDOR (160)
    po lewej: 175 176, po prawej: 165 166 171
EXPRTOANDOR (161)
    po lewej: 177 178, po prawej: 175 176 179 180
EXPR3 (162)
    po lewej: 179 180, po prawej: 178
EXPR1 (163)
    po lewej: 181 182 183 184 185 186 187 188 189 190 191 192 193 194
    195 196 197 198 199 200 201 202 203 204 205 206 207 208 209 210
    211, po prawej: 167 182 183 184 185 186 187 188 189 190 191 192
    193 194 195 196 197 199 200 201 202 203 204 205 206 207 208 209
    212
STARTCALLEXPR (164)
    po lewej: 212, po prawej: 210 211
STARTCALLEXPR2 (165)
    po lewej: 213, po prawej: 224 225
EXPR2 (166)
    po lewej: 214 215 216 217 218 219 220 221 222 223 224 225, po prawej:
    213 215 216 217 218 219 220 221 222 223 262
NUMBER (167)
    po lewej: 226 227 228, po prawej: 230
VALUE (168)
    po lewej: 229 230 231 232, po prawej: 181 214
CALLMETHOD (169)
    po lewej: 233, po prawej: 231
CALLMETH (170)
    po lewej: 234 235 236, po prawej: 233
CALLAMBDASTART (171)
    po lewej: 237, po prawej: 238 245
CALLAMBDASTART2 (172)
    po lewej: 238, po prawej: 246
CALLAMBDASTART3 (173)
    po lewej: 239, po prawej: 240 247
CALLAMBDASTART4 (174)
    po lewej: 240, po prawej: 248
CALLOBJECTSTART (175)
    po lewej: 241 242, po prawej: 244 245 246
CALLFUNCSTART (176)
    po lewej: 243, po prawej: 247 248
CALLOBJECT (177)
    po lewej: 244 245 246 247 248, po prawej: 234
CALLPARENTSTART (178)
    po lewej: 249 250, po prawej: 251
CALLPARENT (179)
    po lewej: 251, po prawej: 236
CALLTHISSTART (180)
    po lewej: 252, po prawej: 253
CALLTHIS (181)
    po lewej: 253 255, po prawej: 235
$@6 (182)
    po lewej: 254, po prawej: 255
METHODCALLED (183)
    po lewej: 256 257 258 259, po prawej: 260 261
CALLTHIS1 (184)
    po lewej: 260 261, po prawej: 244 251 253 255
ARGEXPR (185)
    po lewej: 262 263, po prawej: 122 123 125 135 143 144 145 146 147
    148 149 151 153 155 242 250 258 259
LARG (186)
    po lewej: 264 265 266 267 268, po prawej: 269 270
LARGS (187)
    po lewej: 269 270, po prawej: 150 269
ARGSMETH (188)
    po lewej: 271 272, po prawej: 113 120 210 224 246 260
ARGSMETH1 (189)
    po lewej: 273 274, po prawej: 82 150 271 274
NAMEIDENT (190)
    po lewej: 275, po prawej: 134 136 137 138 139 140 141 142 152 154
    156 265
NAMEIDENTR (191)
    po lewej: 276, po prawej: 277
VARIABLE (192)
    po lewej: 277 278 279, po prawej: 229


stan 0

    0 $accept: . SPACE $end

    KW_CLASS    przesunięcie, i przejście do stanu 1
    KW_MODULE   przesunięcie, i przejście do stanu 2
    KW_GAME     przesunięcie, i przejście do stanu 3
    KW_INT      przesunięcie, i przejście do stanu 4
    KW_DEF      przesunięcie, i przejście do stanu 5
    KW_WHILE    przesunięcie, i przejście do stanu 6
    KW_NEW      przesunięcie, i przejście do stanu 7
    KW_THIS     przesunięcie, i przejście do stanu 8
    KW_DELETE   przesunięcie, i przejście do stanu 9
    KW_STRING   przesunięcie, i przejście do stanu 10
    KW_REAL     przesunięcie, i przejście do stanu 11
    KW_IF       przesunięcie, i przejście do stanu 12
    KW_RETURN   przesunięcie, i przejście do stanu 13
    KW_FOR      przesunięcie, i przejście do stanu 14
    KW_PUBLIC   przesunięcie, i przejście do stanu 15
    KW_MATCH    przesunięcie, i przejście do stanu 16
    NM_STRING   przesunięcie, i przejście do stanu 17
    NM_INT      przesunięcie, i przejście do stanu 18
    NM_REAL     przesunięcie, i przejście do stanu 19
    IDENTIFIER  przesunięcie, i przejście do stanu 20
    KW_FUNC     przesunięcie, i przejście do stanu 21
    '<'         przesunięcie, i przejście do stanu 22
    '|'         przesunięcie, i przejście do stanu 23
    '-'         przesunięcie, i przejście do stanu 24
    '{'         przesunięcie, i przejście do stanu 25
    '('         przesunięcie, i przejście do stanu 26
    '['         przesunięcie, i przejście do stanu 27
    ';'         przesunięcie, i przejście do stanu 28
    '@'         przesunięcie, i przejście do stanu 29
    '_'         przesunięcie, i przejście do stanu 30
    '!'         przesunięcie, i przejście do stanu 31
    '.'         przesunięcie, i przejście do stanu 32
    '\\'        przesunięcie, i przejście do stanu 33

    SPACE            przejście do stanu 34
    SPACE1           przejście do stanu 35
    BEGINCLASS       przejście do stanu 36
    CLASS            przejście do stanu 37
    ARGUMENT         przejście do stanu 38
    METHODBODY       przejście do stanu 39
    METHODBODY2      przejście do stanu 40
    MATCHSTART       przejście do stanu 41
    MATCH            przejście do stanu 42
    RETEXPR          przejście do stanu 43
    FOREXPR          przejście do stanu 44
    STARTWHILE       przejście do stanu 45
    WHILEEXPR        przejście do stanu 46
    LOCALNEW1        przejście do stanu 47
    LOCALNEW         przejście do stanu 48
    STARTIF          przejście do stanu 49
    STARTIF1         przejście do stanu 50
    IFEXPR           przejście do stanu 51
    STARTORDNEW      przejście do stanu 52
    ORDNEW2          przejście do stanu 53
    ORDNEW1          przejście do stanu 54
    ORDNEW           przejście do stanu 55
    ORDDELETE        przejście do stanu 56
    BASETYPE         przejście do stanu 57
    REFERENCE        przejście do stanu 58
    EQUATION         przejście do stanu 59
    STARTOREXP       przejście do stanu 60
    STARTANDEXP      przejście do stanu 61
    EXPRANDOR2       przejście do stanu 62
    QIFEXPR          przejście do stanu 63
    EXPRANDOR3       przejście do stanu 64
    EXPR             przejście do stanu 65
    EXPRANDOR        przejście do stanu 66
    EXPR1            przejście do stanu 67
    STARTCALLEXPR    przejście do stanu 68
    NUMBER           przejście do stanu 69
    VALUE            przejście do stanu 70
    CALLMETHOD       przejście do stanu 71
    CALLMETH         przejście do stanu 72
    CALLOBJECTSTART  przejście do stanu 73
    CALLFUNCSTART    przejście do stanu 74
    CALLOBJECT       przejście do stanu 75
    CALLPARENTSTART  przejście do stanu 76
    CALLPARENT       przejście do stanu 77
    CALLTHISSTART    przejście do stanu 78
    CALLTHIS         przejście do stanu 79
    ARGEXPR          przejście do stanu 80
    NAMEIDENT        przejście do stanu 81
    NAMEIDENTR       przejście do stanu 82
    VARIABLE         przejście do stanu 83


stan 1

    6 BEGINCLASS: KW_CLASS .

    $domyślnie  redukcja przy użyciu reguły 6 (BEGINCLASS)


stan 2

    8 BEGINCLASS: KW_MODULE .

    $domyślnie  redukcja przy użyciu reguły 8 (BEGINCLASS)


stan 3

    7 BEGINCLASS: KW_GAME .

    $domyślnie  redukcja przy użyciu reguły 7 (BEGINCLASS)


stan 4

  128 BASETYPE: KW_INT .

    $domyślnie  redukcja przy użyciu reguły 128 (BASETYPE)


stan 5

  131 BASETYPE: KW_DEF .

    $domyślnie  redukcja przy użyciu reguły 131 (BASETYPE)


stan 6

   95 STARTWHILE: KW_WHILE .

    $domyślnie  redukcja przy użyciu reguły 95 (STARTWHILE)


stan 7

  109 STARTORDNEW: KW_NEW .

    $domyślnie  redukcja przy użyciu reguły 109 (STARTORDNEW)


stan 8

  158 EQUATION: KW_THIS . OPE EXPR
  159         | KW_THIS . OPPP
  160         | KW_THIS . OPMM
  252 CALLTHISSTART: KW_THIS .
  279 VARIABLE: KW_THIS .

    OPE   przesunięcie, i przejście do stanu 84
    OPPP  przesunięcie, i przejście do stanu 85
    OPMM  przesunięcie, i przejście do stanu 86

    '.'          redukcja przy użyciu reguły 252 (CALLTHISSTART)
    $domyślnie  redukcja przy użyciu reguły 279 (VARIABLE)


stan 9

  121 ORDDELETE: KW_DELETE . IDENTIFIER
  122          | KW_DELETE . ARGEXPR

    IDENTIFIER  przesunięcie, i przejście do stanu 87
    '<'         przesunięcie, i przejście do stanu 22
    '\\'        przesunięcie, i przejście do stanu 33

    ARGEXPR  przejście do stanu 88


stan 10

  130 BASETYPE: KW_STRING .

    $domyślnie  redukcja przy użyciu reguły 130 (BASETYPE)


stan 11

  129 BASETYPE: KW_REAL .

    $domyślnie  redukcja przy użyciu reguły 129 (BASETYPE)


stan 12

  102 STARTIF: KW_IF .

    $domyślnie  redukcja przy użyciu reguły 102 (STARTIF)


stan 13

   82 RETEXPR: KW_RETURN . ARGSMETH1 ';'
   83        | KW_RETURN . ';'

    KW_THIS     przesunięcie, i przejście do stanu 89
    NM_STRING   przesunięcie, i przejście do stanu 17
    NM_INT      przesunięcie, i przejście do stanu 18
    NM_REAL     przesunięcie, i przejście do stanu 19
    IDENTIFIER  przesunięcie, i przejście do stanu 90
    KW_FUNC     przesunięcie, i przejście do stanu 21
    '<'         przesunięcie, i przejście do stanu 22
    '-'         przesunięcie, i przejście do stanu 24
    '('         przesunięcie, i przejście do stanu 26
    '['         przesunięcie, i przejście do stanu 27
    ';'         przesunięcie, i przejście do stanu 91
    '_'         przesunięcie, i przejście do stanu 92
    '!'         przesunięcie, i przejście do stanu 31
    '.'         przesunięcie, i przejście do stanu 32
    '\\'        przesunięcie, i przejście do stanu 33

    REFERENCE        przejście do stanu 58
    STARTOREXP       przejście do stanu 60
    STARTANDEXP      przejście do stanu 61
    EXPRANDOR2       przejście do stanu 62
    QIFEXPR          przejście do stanu 63
    EXPRANDOR3       przejście do stanu 64
    EXPR             przejście do stanu 93
    EXPRANDOR        przejście do stanu 66
    EXPR1            przejście do stanu 67
    STARTCALLEXPR    przejście do stanu 68
    NUMBER           przejście do stanu 69
    VALUE            przejście do stanu 70
    CALLMETHOD       przejście do stanu 71
    CALLMETH         przejście do stanu 72
    CALLOBJECTSTART  przejście do stanu 73
    CALLFUNCSTART    przejście do stanu 74
    CALLOBJECT       przejście do stanu 75
    CALLPARENTSTART  przejście do stanu 76
    CALLPARENT       przejście do stanu 77
    CALLTHISSTART    przejście do stanu 78
    CALLTHIS         przejście do stanu 79
    ARGEXPR          przejście do stanu 94
    ARGSMETH1        przejście do stanu 95
    NAMEIDENTR       przejście do stanu 82
    VARIABLE         przejście do stanu 83


stan 14

   84 FOREXPR: KW_FOR . EQFOR1 CMPFOR EQFOR2 METHODBODY2

    '('  przesunięcie, i przejście do stanu 96

    EQFOR1   przejście do stanu 97
    EQFOR1A  przejście do stanu 98


stan 15

    4 SPACE1: KW_PUBLIC . METHOD

    KW_INT       przesunięcie, i przejście do stanu 4
    KW_DEF       przesunięcie, i przejście do stanu 5
    KW_STRING    przesunięcie, i przejście do stanu 10
    KW_REAL      przesunięcie, i przejście do stanu 11
    KW_PUBLIC    przesunięcie, i przejście do stanu 99
    KW_VIRTUAL   przesunięcie, i przejście do stanu 100
    IDENTIFIER   przesunięcie, i przejście do stanu 101
    KW_OPERATOR  przesunięcie, i przejście do stanu 102
    '@'          przesunięcie, i przejście do stanu 29
